--- a/templates/friends.html
+++ b/templates/friends.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set active_page = "friends" %}
 {% block content %}
 <h2> This feature is not yet implemented.</h2>
 {% endblock %}
