--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
 	</p>
 	<p>
 		password:<br>
-		<input type="text" name="password" autocomplete="off">
+		<input type="password" name="password" autocomplete="off">
 	</p>
 	<input type="submit" value="Log In">
 </form>
