--- a/templates/media/media.html
+++ b/templates/media/media.html
@@ -1,10 +1,12 @@
-<div class="media">
-	<h3>
-		{{ media.type }}: {{ media.name }}
-		{% if media.shared %}
-		<span class="sharedicon">shared</span>
-		{% endif %}
-	</h3>
-	<p><i>Owned by: {{ media.owner }}</i></p>
-	{% block information %}{% endblock %}
-</div>
+<a href="/edit/{{ media.type}}/{{ media.id }}">
+	<div class="media">
+		<h3>
+			{{ media.type }}: {{ media.name }}
+			{% if media.shared %}
+			<span class="sharedicon">shared</span>
+			{% endif %}
+		</h3>
+		<p><i>Owned by: {{ media.owner }}</i></p>
+		{% block information %}{% endblock %}
+	</div>
+</a>
