Updated readme and added cookie info on register

--- a/templates/register.html
+++ b/templates/register.html
@@ -48,6 +48,9 @@
 			maxlength="255"
 		>
 	</p>
+	<p><b>By registering you accept that we use cookies for user management, security and whatever
+		<a href="https://www.heroku.com/" target="_blank" rel="noopener noreferrer">Heroku</a> is using.
+	</b></p>
 	<input type="submit" value="Create user">
 </form>
 {% endblock %}
